--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: Build
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ source ]
   pull_request:
-    branches: [ master ]
+    branches: [ source ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -29,7 +29,7 @@ jobs:
       with:
         githubToken: ${{ secrets.DEPLOY_TOKEN }}
         hugoVersion: extended_0.70.0
-        # branch: gh-pages is the default behavior
+        branch: master #gh-pages is the default behavior
         # repo: current repo is the default behavior
         args: --minify --cleanDestinationDir
 
