--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -35,7 +35,12 @@
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
+ [[main]]
+    name = "CV"
+    url = "files/Doronina_Academic_CV.pdf"
+    weight = 70
+
+ [[main]]
+    name = "Resume"
+    url = "files/Doronina_Resume.pdf"
+    weight = 80
